--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "dev": "nest start --watch",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -20,17 +21,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ai-sdk/cohere": "^1.2.10",
+    "@ai-sdk/openai": "^1.3.22",
+    "@mastra/core": "0.9.4",
+    "@mastra/fastembed": "^0.0.3",
+    "@mastra/libsql": "0.0.4",
+    "@mastra/memory": "0.3.4",
+    "@mastra/pg": "^0.3.4",
+    "@mastra/rag": "^0.1.23",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "ai": "^4.3.16",
+    "crypto": "^1.0.1",
+    "qwen-ai-provider": "^0.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "@ai-sdk/openai": "^1.3.22",
-    "@mastra/core": "0.9.4-alpha.4",
-    "@mastra/libsql": "0.0.4-alpha.4",
-    "@mastra/memory": "0.3.4-alpha.4",
-    "ollama-ai-provider": "^1.2.0",
-    "qwen-ai-provider": "^0.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -76,5 +83,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
